--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
                         <td>
                             <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
                             <p>
+                                <b>Learning Robot Exploration Strategy with 4D Point-Clouds-like Information as Observations</b><br>
+                                Zhaoting Li, <b>Tingguang Li</b>, Jiankun Wang, Max Q.-H. Meng.<br> 
+                                (IEEE Robotics and Automation Letters 2021) 
+                            </p>
+                            </td><td style="width: 10px;">
+                            </td>
+                            </tr></tbody></table>           
+                        </td>
+                    </tr> 
+                    </tbody>
+
+
+                    <tbody><tr style="border-width: 1px">
+                        <td>
+                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                            <p>
                                 <b>An Autonomous Eye-in-hand Robotic System for Elevator Button Operation Based on Deep Recognition Network</b><br>
                                 Delong Zhu, Zhe Min, Tong Zhou, <b>Tingguang Li</b>, Max Q.-H. Meng.<br> 
                                 (IEEE Transactions on Instrumentation & Measurement 2020) 
