--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
                         <td>
                             <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
                             <p>
+                                <b>GMR-RRT*: Sampling-based Humanlike Path Planning Using Gaussian Mixture Regression</b><br>
+                                Jiankun Wang, <b>Tingguang Li</b>, Baopu Li, Max Q.-H. Meng.<br> 
+                                (IEEE Transactions on Intelligent Vehicles 2022) 
+                            </p>
+                            </td><td style="width: 10px;">
+                            </td>
+                            </tr></tbody></table>           
+                        </td>
+                    </tr> 
+                    </tbody>
+
+                    <tbody><tr style="border-width: 1px">
+                        <td>
+                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                            <p>
                                 <b>Learning Robot Exploration Strategy with 4D Point-Clouds-like Information as Observations</b><br>
                                 Zhaoting Li, <b>Tingguang Li</b>, Jiankun Wang, Max Q.-H. Meng.<br> 
                                 (IEEE Robotics and Automation Letters 2021) 
@@ -151,20 +166,7 @@
                     </tr> 
                     </tbody>
 
-                    <tbody><tr style="border-width: 1px">
-                        <td>
-                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
-                            <p>
-                                <b>GMR-RRT*: Sampling-based Humanlike Path Planning Using Gaussian Mixture Regression</b><br>
-                                Jiankun Wang, <b>Tingguang Li</b>, Baopu Li, Max Q.-H. Meng.<br> 
-                                (Submitted to IEEE Transactions on Autonomous Science and Engineering 2020) 
-                            </p>
-                            </td><td style="width: 10px;">
-                            </td>
-                            </tr></tbody></table>           
-                        </td>
-                    </tr> 
-                    </tbody>
+                    
                 </table>
 
                 <br><br><h1>Conference Papers</h1>
