--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                 <br><h1>Tingguang Li （李珽光）</h1>
                 <h2>tgli0809 AT gmail.com</h2>
                 <br>
-                I am currently a senior researcher at Robotics X, Tencent. Before that, I received the Ph.D. degree in 2020 in <a href="http://www.ee.cuhk.edu.hk/">The Electronic Engineering Department</a> at <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.ee.cuhk.edu.hk/~qhmeng/">Professor Max Qing-Hu Meng</a>, and the BEng. in Control and System Engineering from <a href="https://www.nju.edu.cn/EN/">Nanjing University</a> in 2016. In 2019, I was a visiting student researcher at <a href="http://iprl.stanford.edu/">Interactive Perception and Robot Learning Lab</a>, Stanford University, under the supervision of <a href="https://am.is.tuebingen.mpg.de/person/jbohg">Professor Jeannette Bohg</a>.
+                I am currently a Senior Research Scientist at Robotics X, Tencent. Before that, I received the Ph.D. degree at <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.ee.cuhk.edu.hk/~qhmeng/">Professor Max Qing-Hu Meng</a>, and the BEng. from <a href="https://www.nju.edu.cn/EN/">Nanjing University</a>. In 2019, I was a Visiting Student Researcher at <a href="https://ai.stanford.edu/">Artificial Intelligence Laboratory (SAIL)</a>, Stanford University, under the supervision of <a href="https://am.is.tuebingen.mpg.de/person/jbohg">Professor Jeannette Bohg</a>.
                 <br><br>
-                My research interests lie in reinforcement learning and robotics. Currently, I am working on projects of character motion animation and sim-to-real imitation learning.
+                My research interests lie in applying Reinforcement Learning on Robotics, including dexterous manipulation, quadrapdal control, decision making, imitation learning, sim-to-real transfer. Recently, I am working on projects of multimodal models, specifically, Vison Language Action models (VLA). We hope to endow robots with the intelligence to see (Vision), listen (language) and react (Action) autonomously.
                 <br><br>
-                !!!We are hiring motivated interns. If you work on deep reinforcement learning, robotics, or computer graphics, feel free to contact me.
+                !!!We are hiring self-motivated interns. If you are working on deep reinforcement learning, robotics, and interested in large models, please feel free to contact me.
                 <br><br>
                 <h2><a href="https://scholar.google.com.hk/citations?user=n8dcoCsAAAAJ&hl=en">Google Scholar</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="./TingguangLi_files/Tingguang.pdf">CV</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://github.com/TeaganLi">Github</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://hk.linkedin.com/in/tingguang-li">Linkedin</a></h2>
             </div>
@@ -98,9 +98,8 @@
             <div id="portfolio-info">
                 <h1>News</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
-                	<li>[07/2020] One paper on autonomous exploration has been accepted by <a href="https://iros2020.org">IROS 2020</a>.  </li>
-                    <li>[03/2020] One paper on in-hand manipulation has been accepted by <a href="https://icra2020.org">ICRA 2020</a>.  </li>
-                	<li>[08/2019] One paper on in-hand manipulation is reported by <a href=https://techxplore.com/news/2019-08-rubik-cube-dexterous.html>TechXplore</a>.</li>
+                	<li>[09/2023] I will attend <a href="https://ieee-iros.org">IROS 2023</a> in Detroit, feel free to contact me if you are at the conference!  </li>
+                    <li>[06/2023] Our latest work on animal-level agility is released <a href="https://mp.weixin.qq.com/s/8hnRq_HSL0E5yGf2e6JI_w">栩栩如生的机器狗：腾讯Robotics X用预训练模型和强化学习提升机器狗控制</a>.  </li>
                 </ul>
 
                 <br><br><h1>Journal Papers</h1>
@@ -172,6 +171,23 @@
                 <br><br><h1>Conference Papers</h1>
                     <table id="portfolio-projects">
                         <tbody><tr style="border-width: 1px">
+                            <td><img src="./TingguangLi_files/climb_stairs.png"></td>
+                            <td>
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>Learning Terrain-Adaptive Locomotion with Agile Behaviors by Imitating Animals</b><br>
+                                    <b>Tingguang Li</b>, Yizheng Zhang, Chong Zhang, Qingxu Zhu, Jiapeng Sheng, Cheng Zhou, Lei Han.<br> 
+                                    (IEEE/RSJ International Conference on Intelligent Robots and Systems, <b>IROS 2023</b>) 
+                                    <br><a href="https://arxiv.org/abs/2308.03273">Paper</a>&nbsp;·&nbsp;
+                                    <a href="https://www.youtube.com/watch?v=jvFK-JiriTg">Video Demo (YouTube)</a>
+                                </p>
+                                </td><td style="width: 10px;">
+                                </td>
+                                </tr></tbody></table>           
+                            </td>
+                        </tr> 
+
+                         <tbody><tr style="border-width: 1px">
                             <td><img src="./TingguangLi_files/HouseExpo.png"></td>
                             <td>
                                 <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
@@ -187,6 +203,7 @@
                                 </tr></tbody></table>           
                             </td>
                         </tr> 
+
 
  						<tbody><tr style="border-width: 1px">
                             <td><img src="./TingguangLi_files/PoseSpace.png"></td>
@@ -325,9 +342,18 @@
 
                     </table>
 
+                <br><br><h1>Talks</h1>
+                <br><ul style="list-style-type:disc; margin-left: 20px">
+                    <li>将门AI红人榜专访：<a href="https://mp.weixin.qq.com/s/xDg2EtJQyiIMVny5NGuD3w">“爱折腾”与“慢慢来”</a></li>
+                    <li>将门Talk：<a href="https://mp.weixin.qq.com/s/zgtneimH0VbHKeNc8WjDTA">一种基于层次强化学习的机械手鲁棒操作</a></li>
+                    <li>One paper <em>Solving a Rubik's Cube with a Dexterous Hand</em> is reported by <a href=https://techxplore.com/news/2019-08-rubik-cube-dexterous.html>TechXplore</a>.</li>
+                </ul>
+
 
                 <br><br><h1>Honors</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
+                    <li>Tencent Technology Breakthrough Award </a> (2020, 2022)</li>
+                    <li>Outstanding Tutor Award of The Chinese University of Hong Kong</a> (2020)</li>
                     <li>Outstanding Students Award of The Chinese University of Hong Kong</a> (2018)</li>
                     <li>IROS 2018 travel award</a> (2018)</li>
                     <li>ICRA 2018 student travel award</a> (2018)</li>
@@ -346,11 +372,6 @@
                     <li>Teaching Assistant: CUHK BMEG 4130, Biomedical Modeling, 2016</li>
                 </ul>
 
-                <br><br><br><h1>Services</h1>
-                <br><ul style="list-style-type:disc; margin-left: 20px">
-                	<li>Reviewer of IROS2020, IROS2018, RCAR2017, ICIA2017. </li>
-                    <li>Session Chair of IEEE International Conference on Information and Automation (ICIA), 2017</li>
-                </ul>
                 <br><br><br><br><br>
             </div>
 		</div>	
