update three papers

--- a/index.html
+++ b/index.html
@@ -98,12 +98,29 @@
             <div id="portfolio-info">
                 <h1>News</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
-                	<li>[09/2023] I will attend <a href="https://ieee-iros.org">IROS 2023</a> in Detroit, feel free to contact me if you are at the conference!  </li>
+                	<li>[09/2023] Two papers accepted in ICRA 2024.  </li>
                     <li>[06/2023] Our latest work on animal-level agility is released <a href="https://mp.weixin.qq.com/s/8hnRq_HSL0E5yGf2e6JI_w">栩栩如生的机器狗：腾讯Robotics X用预训练模型和强化学习提升机器狗控制</a>.  </li>
                 </ul>
 
                 <br><br><h1>Journal Papers</h1>
                 <table id="portfolio-projects">
+                    <tbody><tr style="border-width: 1px">
+                        <td>
+                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                            <p>
+                                <b>Lifelike Agility and Play on Quadrupedal Robots using Reinforcement Learning and Generative Pre-trained Models</b><br>
+                                Lei Han*, Qingxu Zhu*, Jiapeng Sheng*, Chong Zhang*, <b>Tingguang Li*</b>, Yizheng Zhang*, He Zhang*, Yuzhen Liu, Cheng Zhou, Rui Zhao, Jie Li, Yufeng Zhang, Rui Wang, Wanchao Chi, Xiong Li, Yonghui Zhu, Lingzhu Xiang, Xiao Teng, Zhengyou Zhang.<br> 
+                                (Under review)
+                                <br><a href="https://tencent-roboticsx.github.io/lifelike-agility-and-play/">Project Page</a>&nbsp;·&nbsp;<a href="https://arxiv.org/abs/2308.15143">Paper</a>&nbsp;·&nbsp;
+                                    <a href="https://www.youtube.com/watch?v=ucucrLqT5dM">Video Demo (YouTube)</a>
+                            </p>
+                            </td><td style="width: 10px;">
+                            </td>
+                            </tr></tbody></table>           
+                        </td>
+                    </tr> 
+                    </tbody>
+
                     <tbody><tr style="border-width: 1px">
                         <td>
                             <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
@@ -170,6 +187,40 @@
 
                 <br><br><h1>Conference Papers</h1>
                     <table id="portfolio-projects">
+                        <tbody><tr style="border-width: 1px">
+                            <td><img src="./TingguangLi_files/world_model.png"></td>
+                            <td>
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>An Efficient Model-Based Approach on Learning Agile Motor Skills without Reinforcement</b><br>
+                                    Haojie Shi*, <b>Tingguang Li*</b>, Qingxu Zhu, Jiapeng Sheng, Lei Han, Max Q.-H. Meng.<br> 
+                                    (IEEE International Conference on Robotics and Automation, <b>ICRA 2024</b>)
+                                    <br><a href="https://arxiv.org/abs/2403.01962">Paper</a>
+                                </p>
+                                </td><td style="width: 10px;">
+                                </td>
+                                </tr></tbody></table>           
+                            </td>
+                        </tr> 
+
+                        <table id="portfolio-projects">
+                        <tbody><tr style="border-width: 1px">
+                            <td><img src="./TingguangLi_files/dynamic.png"></td>
+                            <td>
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>Learning Highly Dynamic Behaviors for Quadrupedal Robots</b><br>
+                                    Chong Zhang, Jiapeng Sheng, <b>Tingguang Li</b>, He Zhang, Cheng Zhou, Qingxu, Zhu, Rui Zhao, Yizheng Zhang, Lei Han.<br> 
+                                    (IEEE International Conference on Robotics and Automation, <b>ICRA 2024</b>) 
+                                    <br><a href="https://arxiv.org/abs/2402.13473">Paper</a>
+                                </p>
+                                </td><td style="width: 10px;">
+                                </td>
+                                </tr></tbody></table>           
+                            </td>
+                        </tr> 
+
+                        <table id="portfolio-projects">
                         <tbody><tr style="border-width: 1px">
                             <td><img src="./TingguangLi_files/climb_stairs.png"></td>
                             <td>
