--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                                     <b>An Efficient Model-Based Approach on Learning Agile Motor Skills without Reinforcement</b><br>
                                     Haojie Shi*, <b>Tingguang Li*</b>, Qingxu Zhu, Jiapeng Sheng, Lei Han, Max Q.-H. Meng.<br> 
                                     (IEEE International Conference on Robotics and Automation, <b>ICRA 2024</b>)
-                                    <br><a href="https://arxiv.org/abs/2403.01962">Paper</a>
+                                    <br><a href="https://arxiv.org/abs/2403.01962">Paper</a>&nbsp;·&nbsp;
+                                    <a href="https://www.youtube.com/watch?v=2R4RffrzS98">Video Demo (YouTube)</a>
                                 </p>
                                 </td><td style="width: 10px;">
                                 </td>
