--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <br><h1>Tingguang Li （李珽光）</h1>
                 <h2>tgli0809 AT gmail.com</h2>
                 <br>
-                I am currently a Senior Research Scientist at Robotics X, Tencent. Before that, I received the Ph.D. degree at <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.ee.cuhk.edu.hk/~qhmeng/">Professor Max Qing-Hu Meng</a>, and the BEng. from <a href="https://www.nju.edu.cn/EN/">Nanjing University</a>. In 2019, I was a Visiting Student Researcher at <a href="https://ai.stanford.edu/">Artificial Intelligence Laboratory (SAIL)</a>, Stanford University, under the supervision of <a href="https://am.is.tuebingen.mpg.de/person/jbohg">Professor Jeannette Bohg</a>.
+                I am currently a Senior Research Scientist at Robotics X Lab, Tencent. Before that, I received the Ph.D. degree at <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.ee.cuhk.edu.hk/~qhmeng/">Professor Max Qing-Hu Meng</a>, and the BEng. from <a href="https://www.nju.edu.cn/EN/">Nanjing University</a>. In 2019, I was a Visiting Student Researcher at <a href="https://ai.stanford.edu/">Artificial Intelligence Laboratory (SAIL)</a>, Stanford University, under the supervision of <a href="https://am.is.tuebingen.mpg.de/person/jbohg">Professor Jeannette Bohg</a>.
                 <br><br>
                 My research interests lie in applying Reinforcement Learning on Robotics, including dexterous manipulation, quadrapdal control, decision making, imitation learning, sim-to-real transfer. Recently, I am working on projects of multimodal models, specifically, Vison Language Action models (VLA). We hope to endow robots with the intelligence to see (Vision), listen (language) and react (Action) autonomously.
                 <br><br>
@@ -98,91 +98,85 @@
             <div id="portfolio-info">
                 <h1>News</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
+                    <li>[09/2024] Our paper is published in Nature Machine Intelligent as the <b>Cover Article</b>!  </li>
                 	<li>[09/2023] Two papers accepted in ICRA 2024.  </li>
-                    <li>[06/2023] Our latest work on animal-level agility is released <a href="https://mp.weixin.qq.com/s/8hnRq_HSL0E5yGf2e6JI_w">栩栩如生的机器狗：腾讯Robotics X用预训练模型和强化学习提升机器狗控制</a>.  </li>
                 </ul>
 
                 <br><br><h1>Journal Papers</h1>
                 <table id="portfolio-projects">
-                    <tbody><tr style="border-width: 1px">
-                        <td>
-                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
-                            <p>
-                                <b>Lifelike Agility and Play on Quadrupedal Robots using Reinforcement Learning and Generative Pre-trained Models</b><br>
-                                Lei Han*, Qingxu Zhu*, Jiapeng Sheng*, Chong Zhang*, <b>Tingguang Li*</b>, Yizheng Zhang*, He Zhang*, Yuzhen Liu, Cheng Zhou, Rui Zhao, Jie Li, Yufeng Zhang, Rui Wang, Wanchao Chi, Xiong Li, Yonghui Zhu, Lingzhu Xiang, Xiao Teng, Zhengyou Zhang.<br> 
-                                (Under review)
-                                <br><a href="https://tencent-roboticsx.github.io/lifelike-agility-and-play/">Project Page</a>&nbsp;·&nbsp;<a href="https://arxiv.org/abs/2308.15143">Paper</a>&nbsp;·&nbsp;
+                    <tbody>
+                        <!-- 第一篇文章 (带图片) -->
+                        <tr style="border-width: 1px">
+                            <td><img src="./TingguangLi_files/lifelike.png"></td>
+                            <td>
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>Lifelike Agility and Play on Quadrupedal Robots using Reinforcement Learning and Generative Pre-trained Models</b><br>
+                                    Lei Han*, Qingxu Zhu*, Jiapeng Sheng*, Chong Zhang*, <b>Tingguang Li*</b>, Yizheng Zhang*, He Zhang*, Yuzhen Liu, Cheng Zhou, Rui Zhao, Jie Li, Yufeng Zhang, Rui Wang, Wanchao Chi, Xiong Li, Yonghui Zhu, Lingzhu Xiang, Xiao Teng, Zhengyou Zhang.<br> 
+                                    (Nature Machine Intelligence, Vol. 6, No. 7, 2024, <b><font color="red">the Cover Article</font></b>)
+                                    <br><a href="https://tencent-roboticsx.github.io/lifelike-agility-and-play/">Project Page</a>&nbsp;·&nbsp;
+                                    <a href="https://www.nature.com/articles/s42256-024-00861-3.epdf?sharing_token=LefHIVx7Eo4H4hfPW3x5-tRgN0jAjWel9jnR3ZoTv0P2djh087mpk72LMRoOMc_uwbbIqDtN4Lxvs3jA_fO5WQSfjVVvx73vxwstiueUmocSwzBcT3Zo99d1W2yvCyDpoFeYSRql6uYWG3vnuN0ZhtJycXNyk8Ls1cycgZ8L8oI%3D">Nature</a>&nbsp;·&nbsp;
+                                    <a href="https://arxiv.org/abs/2308.15143">Arxiv</a>&nbsp;·&nbsp;
                                     <a href="https://www.youtube.com/watch?v=ucucrLqT5dM">Video Demo (YouTube)</a>
-                            </p>
-                            </td><td style="width: 10px;">
+                                </p>
+                                </td><td style="width: 10px;">
+                                </td>
+                                </tr></tbody></table>           
                             </td>
-                            </tr></tbody></table>           
-                        </td>
-                    </tr> 
-                    </tbody>
+                        </tr>
 
-                    <tbody><tr style="border-width: 1px">
-                        <td>
-                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
-                            <p>
-                                <b>GMR-RRT*: Sampling-based Humanlike Path Planning Using Gaussian Mixture Regression</b><br>
-                                Jiankun Wang, <b>Tingguang Li</b>, Baopu Li, Max Q.-H. Meng.<br> 
-                                (IEEE Transactions on Intelligent Vehicles 2022) 
-                            </p>
-                            </td><td style="width: 10px;">
+                        <!-- 第二篇文章 (无图片) -->
+                        <tr style="border-width: 1px">
+                            <td colspan="2">
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>GMR-RRT*: Sampling-based Humanlike Path Planning Using Gaussian Mixture Regression</b><br>
+                                    Jiankun Wang, <b>Tingguang Li</b>, Baopu Li, Max Q.-H. Meng.<br> 
+                                    (IEEE Transactions on Intelligent Vehicles 2022) 
+                                </p>
+                                </td></tr></tbody></table>
                             </td>
-                            </tr></tbody></table>           
-                        </td>
-                    </tr> 
-                    </tbody>
+                        </tr>
 
-                    <tbody><tr style="border-width: 1px">
-                        <td>
-                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
-                            <p>
-                                <b>Learning Robot Exploration Strategy with 4D Point-Clouds-like Information as Observations</b><br>
-                                Zhaoting Li, <b>Tingguang Li</b>, Jiankun Wang, Max Q.-H. Meng.<br> 
-                                (IEEE Robotics and Automation Letters 2021) 
-                            </p>
-                            </td><td style="width: 10px;">
+                        <!-- 第三篇文章 (无图片) -->
+                        <tr style="border-width: 1px">
+                            <td colspan="2">
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>Learning Robot Exploration Strategy with 4D Point-Clouds-like Information as Observations</b><br>
+                                    Zhaoting Li, <b>Tingguang Li</b>, Jiankun Wang, Max Q.-H. Meng.<br> 
+                                    (IEEE Robotics and Automation Letters 2021) 
+                                </p>
+                                </td></tr></tbody></table>
                             </td>
-                            </tr></tbody></table>           
-                        </td>
-                    </tr> 
-                    </tbody>
+                        </tr>
 
-
-                    <tbody><tr style="border-width: 1px">
-                        <td>
-                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
-                            <p>
-                                <b>An Autonomous Eye-in-hand Robotic System for Elevator Button Operation Based on Deep Recognition Network</b><br>
-                                Delong Zhu, Zhe Min, Tong Zhou, <b>Tingguang Li</b>, Max Q.-H. Meng.<br> 
-                                (IEEE Transactions on Instrumentation & Measurement 2020) 
-                            </p>
-                            </td><td style="width: 10px;">
+                        <!-- 第四篇文章 (无图片) -->
+                        <tr style="border-width: 1px">
+                            <td colspan="2">
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>An Autonomous Eye-in-hand Robotic System for Elevator Button Operation Based on Deep Recognition Network</b><br>
+                                    Delong Zhu, Zhe Min, Tong Zhou, <b>Tingguang Li</b>, Max Q.-H. Meng.<br> 
+                                    (IEEE Transactions on Instrumentation & Measurement 2020) 
+                                </p>
+                                </td></tr></tbody></table>
                             </td>
-                            </tr></tbody></table>           
-                        </td>
-                    </tr> 
-                    </tbody>
+                        </tr>
 
-                    <tbody><tr style="border-width: 1px">
-                        <td>
-                            <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
-                            <p>
-                                <b>A Searching Space Constrained Partial to Full Registration Approach with Applications in Airport Trolley Deployment Robot</b><br>
-                                Jin Pan, Xiaochun Mai, Chaoqun Wang, Zhe Min, Jiankun Wang, Hu Cheng, <b>Tingguang Li</b>, Erli Lyu, Li Liu, Max Q.-H. Meng.<br> 
-                                (IEEE Sensor Journal 2020) 
-                            </p>
-                            </td><td style="width: 10px;">
+                        <!-- 第五篇文章 (无图片) -->
+                        <tr style="border-width: 1px">
+                            <td colspan="2">
+                                <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
+                                <p>
+                                    <b>A Searching Space Constrained Partial to Full Registration Approach with Applications in Airport Trolley Deployment Robot</b><br>
+                                    Jin Pan, Xiaochun Mai, Chaoqun Wang, Zhe Min, Jiankun Wang, Hu Cheng, <b>Tingguang Li</b>, Erli Lyu, Li Liu, Max Q.-H. Meng.<br> 
+                                    (IEEE Sensor Journal 2020) 
+                                </p>
+                                </td></tr></tbody></table>
                             </td>
-                            </tr></tbody></table>           
-                        </td>
-                    </tr> 
+                        </tr>
                     </tbody>
-
-                    
                 </table>
 
                 <br><br><h1>Conference Papers</h1>
@@ -343,7 +337,7 @@
                                 <table style="width: 100%;"><tbody><tr><td style="width: 100%; text-align: left;">
                                 <p>
                                     <b>A Hybrid 3DoF Pose Estimation Method Based on Camera and Lidar Data</b><br>
-                                    <b>Tingguang Li</b>, Delong Zhu, Max Q.-H. Meng. <br> (IEEE International Conference on Robotics and Biomimetics, <b>ROBIO 2017, Best Conference Paper Award Finalist</b>)
+                                    <b>Tingguang Li</b>, Delong Zhu, Max Q.-H. Meng. <br> (IEEE International Conference on Robotics and Biomimetics, <b>ROBIO 2017, </b><b style="color:red">Best Conference Paper Award Finalist</b>)
                                     <br><a href="https://sites.google.com/view/hybrid-pose-estimation/home">Project Page</a>&nbsp;·&nbsp;<a href="https://ieeexplore.ieee.org/abstract/document/8324444">Paper</a>&nbsp;·&nbsp;
                                     <a href="https://www.youtube.com/watch?v=FqbH4VPqiyY&t=198s">Video Demo (YouTube)</a>&nbsp;·&nbsp;
                                     <a href="https://github.com/TeaganLi/A-Hybrid-3DoF-Pose-Estimation-Method-based-on-Camera-and-Lidar-Data">Code (Github)</a>
@@ -396,6 +390,7 @@
 
                 <br><br><h1>Talks</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
+                    <li><a href="https://mp.weixin.qq.com/s/8hnRq_HSL0E5yGf2e6JI_w">栩栩如生的机器狗：腾讯Robotics X用预训练模型和强化学习提升机器狗控制</a>.</li>
                     <li>将门AI红人榜专访：<a href="https://mp.weixin.qq.com/s/xDg2EtJQyiIMVny5NGuD3w">“爱折腾”与“慢慢来”</a></li>
                     <li>将门Talk：<a href="https://mp.weixin.qq.com/s/zgtneimH0VbHKeNc8WjDTA">一种基于层次强化学习的机械手鲁棒操作</a></li>
                     <li>One paper <em>Solving a Rubik's Cube with a Dexterous Hand</em> is reported by <a href=https://techxplore.com/news/2019-08-rubik-cube-dexterous.html>TechXplore</a>.</li>
@@ -404,7 +399,8 @@
 
                 <br><br><h1>Honors</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
-                    <li>Tencent Technology Breakthrough Award </a> (2020, 2022)</li>
+                    <li>Tencent Annual Patent Grand Prize (<span style="color: red; font-weight: bold;">First Inventor</span>) (2023)</li>
+                    <li>Tencent Technology Breakthrough Award </a> (2020, 2022, 2023)</li>
                     <li>Outstanding Tutor Award of The Chinese University of Hong Kong</a> (2020)</li>
                     <li>Outstanding Students Award of The Chinese University of Hong Kong</a> (2018)</li>
                     <li>IROS 2018 travel award</a> (2018)</li>
