--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <div id="portfolio-info">
                 <h1>News</h1>
                 <br><ul style="list-style-type:disc; margin-left: 20px">
+                    <li>[05/2025] We released our latest multi-modal perception and planning model: <a href="https://mp.weixin.qq.com/s/LIXALvJVL6h92iGPKxhjnA">blog (Chinese)</a></li>
                     <li>[09/2024] Our paper is published in Nature Machine Intelligent as the <b>Cover Article</b>!  </li>
                 	<li>[09/2023] Two papers accepted in ICRA 2024.  </li>
                 </ul>
