--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
                 <br><h1>Tingguang Li （李珽光）</h1>
                 <h2>tgli0809 AT gmail.com</h2>
                 <br>
-                I am currently a Senior Research Scientist at Robotics X Lab, Tencent. Before that, I received the Ph.D. degree at <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.ee.cuhk.edu.hk/~qhmeng/">Professor Max Qing-Hu Meng</a>, and the BEng. from <a href="https://www.nju.edu.cn/EN/">Nanjing University</a>. In 2019, I was a Visiting Student Researcher at <a href="https://ai.stanford.edu/">Artificial Intelligence Laboratory (SAIL)</a>, Stanford University, under the supervision of <a href="https://am.is.tuebingen.mpg.de/person/jbohg">Professor Jeannette Bohg</a>.
+                I am currently a Principal Engineer at Samsung Electronics. Previously, I was a Senior Research Scientist at Tencent Robotics X Lab. I received the Ph.D. degree at <a href="http://www.cuhk.edu.hk/english/index.html">The Chinese University of Hong Kong</a>, supervised by <a href="http://www.ee.cuhk.edu.hk/~qhmeng/">Professor Max Qing-Hu Meng</a>, and the BEng. from <a href="https://www.nju.edu.cn/EN/">Nanjing University</a>. In 2019, I was a Visiting Student Researcher at <a href="https://ai.stanford.edu/">Artificial Intelligence Laboratory (SAIL)</a>, Stanford University, under the supervision of <a href="https://am.is.tuebingen.mpg.de/person/jbohg">Professor Jeannette Bohg</a>.
                 <br><br>
-                My research interests lie in applying Reinforcement Learning on Robotics, including dexterous manipulation, quadrapdal control, decision making, imitation learning, sim-to-real transfer. Recently, I am working on projects of multimodal models, specifically, Vison Language Action models (VLA). We hope to endow robots with the intelligence to see (Vision), listen (language) and react (Action) autonomously.
+                My research interests lie in applying Reinforcement Learning on Robotics, including dexterous manipulation, quadrapdal control, imitation learning, sim-to-real transfer. Recently, I am working on projects of multimodal models, specifically, Vison Language Action models (VLA). We hope to endow robots with the intelligence to see (Vision), listen (language) and react (Action) autonomously.
                 <br><br>
-                !!!We are hiring self-motivated interns. If you are working on deep reinforcement learning, robotics, and interested in large models, please feel free to contact me.
+                !!!We are hiring self-motivated interns. If you are working on VLA, deep reinforcement learning, robotics, and interested in large models, please feel free to contact me.
                 <br><br>
                 <h2><a href="https://scholar.google.com.hk/citations?user=n8dcoCsAAAAJ&hl=en">Google Scholar</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="./TingguangLi_files/Tingguang.pdf">CV</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://github.com/TeaganLi">Github</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://hk.linkedin.com/in/tingguang-li">Linkedin</a></h2>
             </div>
             <div id="portfolio-photo">
-                <img src="./TingguangLi_files/icon2.jpg">
+                <img src="./TingguangLi_files/icon3.jpg">
             </div>
             <div id="portfolio-info">
                 <h1>News</h1>
